fix: overflow auto

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -8,7 +8,7 @@
 .codeArea {
   display: grid;
   gap: 16px;
-  overflow-x: scroll;
+  overflow-x: auto;
 
   textarea {
     width: 100%;
